# ml_examples

./: .gitignore  README.md  data_fetcher.ipynb  pyproject.toml  pytorch.ipynb  tensorflow.ipynb
deployment/kserve/: README.md  minio.yaml
deployment/kserve/inputs/: oip_inputs.json  oip_inputs_outputs.json  tfserving_inputs.json
deployment/kserve/scripts/: deploy_cluster.bash  deploy_lightgbm_model.bash  deploy_lightgbm_with_mlserver.bash  deploy_onnx_pytorch_with_tritonserver.bash  deploy_onnx_tensorflow_with_tritonserver.bash  deploy_pytorch_model.bash  deploy_pytorch_model_v2.bash  deploy_pytorch_with_torchserve.bash  deploy_s3_resources.bash  deploy_scikit_model.bash  deploy_scikit_with_mlserver.bash  deploy_tensorflow_model.bash  deploy_tensorflow_with_tfserving.bash  deploy_tensorflow_with_tritonserver.bash  deploy_torchscript_with_tritonserver.bash  deploy_xgboost_model.bash  deploy_xgboost_with_mlserver.bash  test_all_from_scratch.bash  utils.bash
deployment/kserve/templates/: lightgbm.yaml  service_account_for_s3.yaml  sklearn.yaml  (+3 more)
deployment/lightgbm_regressor/: README.md  my_handler.py  test_predictions.py
deployment/pytorch/: README.md  my_handler.py  my_handler_kserve.py  my_handler_v2.py  test_predictions.py
deployment/scikit_custom_regressor/: README.md  my_handler.py  my_model.py  test_predictions.py
deployment/tensorflow/: README.md  test_predictions.py
deployment/tfserving/: README.md  test_predictions.py
deployment/torchserve/: README.md  my_handler.py  my_model.py
deployment/xgboost_regressor/: README.md  my_handler.py  test_predictions.py
notebooks/: data_fetcher.ipynb  lightgbm.ipynb  lightgbm_regressor.ipynb  pytorch.ipynb  scikit.ipynb  scikit_custom_regressor.ipynb  tensorflow.ipynb  xgboost.ipynb  xgboost_regressor.ipynb
(+18 files in other folders)
