[tool.poetry]
name = "ml-examples"
version = "0.1.0"
description = ""
authors = ["Gabriel Moreira <gabrielmscampos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.3.2"
cmsdials = {extras = ["pandas", "tqdm"], version = "^1.7.0"}
runregistry = "^3.1.1"
numpy = "<2.2.0"
tensorflow = "^2.18.0"
matplotlib = "^3.10.1"
torch = "^2.6.0"
xgboost = "^2.1.4"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
lightgbm = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
